--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3"
